--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -60,6 +60,8 @@ bAllowFlyterCarryPvE=True
 bAllowUnlimitedRespecs=True
 HarvestAmountMultiplier=3
 HarvestHealthMultiplier=1.5
+ServerAdminPassword=hehhehheh
+ServerPassword=hehheh
 PlayerCharacterFoodDrainMultiplier=0.8
 PlayerCharacterHealthRecoveryMultiplier=1.2
 PlayerCharacterStaminaDrainMultiplier=0.8
