--- a/config/Game.ini
+++ b/config/Game.ini
@@ -25,8 +25,9 @@ GlobalSpoilingTimeMultiplier=2.0
 GlobalCorpseDecompositionTimeMultiplier=4.0
 CropGrowthSpeedMultiplier=24.000000
 FuelConsumptionIntervalMultiplier=10.0
-NPCReplacements=(FromClassName="Ichthyornis_Character_BP_C",ToClassName="Pela_Character_BP_C")
+NPCReplacements=(FromClassName="Ichthyornis_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Pegomastax_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
+NPCReplacements=(FromClassName="Dilo_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_Fish_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_Polymer_Organic_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
