--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -162,8 +162,8 @@ sg.HeightFieldShadowQuality=3
 SessionName=Queens
 
 [MessageOfTheDay]
-Message=Relax man, you're two tents!
-Duration=10
+Message=Two black men in a sleeping bag? Twix!
+Duration=33
 
 [/Script/Engine.GameSession]
 MaxPlayers=70
