--- a/config/arkserver.cfg
+++ b/config/arkserver.cfg
@@ -4,5 +4,5 @@
 # PLACE INSTANCE SETTINGS HERE
 ## These settings will apply to a specific instance.
 ## Server Parameters | https://docs.linuxgsm.com/configuration/start-parameters#additional-parameters
-startparameters="${defaultmap}?AltSaveDirectoryName=${altsavedirectoryname}?AllowAnyoneBabyImprint=true?listen?MultiHome=${ip}?MaxPlayers=${maxplayers}?QueryPort=${queryport}?RCONPort=${rconport}?Port=${port}? -automanagedmods -crossplay -exclusivejoin -PublicIPForEpic=${ip}"
+startparameters="${defaultmap}?AltSaveDirectoryName=${altsavedirectoryname}?AllowAnyoneBabyImprint=true?listen?MultiHome=${ip}?MaxPlayers=${maxplayers}?QueryPort=${queryport}?RCONPort=${rconport}?Port=${port}? -automanagedmods -crossplay -PublicIPForEpic=${ip}"
 
