--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -3,6 +3,7 @@ AllowFlyerCarryPvE=True
 AllowThirdPersonPlayer=False
 alwaysNotifyPlayerLeft=True
 alwaysNotifyPlayerJoined=True
+AlwaysAllowStructurePickup=True
 AutoSavePeriodMinutes=15.000000
 ClampResourceHarvestDamage=False
 DifficultyOffset=0.200000
