--- a/config/Game.ini
+++ b/config/Game.ini
@@ -24,6 +24,7 @@ ResourcesRespawnPeriodMultiplier=1
 GlobalSpoilingTimeMultiplier=2.0
 GlobalCorpseDecompositionTimeMultiplier=4.0
 CropGrowthSpeedMultiplier=24.000000
+SupplyCrateLootQualityMultiplier=3.0
 FuelConsumptionIntervalMultiplier=10.0
 NPCReplacements=(FromClassName="Ichthyornis_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Pegomastax_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
