StructurePickupHoldDuration=5, was 0.5 default

--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -4,6 +4,7 @@ AllowThirdPersonPlayer=False
 alwaysNotifyPlayerLeft=True
 alwaysNotifyPlayerJoined=True
 AlwaysAllowStructurePickup=True
+StructurePickupHoldDuration=5
 AutoSavePeriodMinutes=15.000000
 ClampResourceHarvestDamage=False
 DifficultyOffset=0.200000
