--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -4,7 +4,8 @@ AllowThirdPersonPlayer=False
 alwaysNotifyPlayerLeft=True
 alwaysNotifyPlayerJoined=True
 AlwaysAllowStructurePickup=True
-StructurePickupHoldDuration=10
+StructurePickupHoldDuration=10.000000
+StructurePickupTimeAfterPlacement=120.000000
 AutoSavePeriodMinutes=15.000000
 ClampResourceHarvestDamage=False
 DifficultyOffset=0.200000
@@ -34,8 +35,6 @@ OxygenSwimSpeedStatMultiplier=3.000000
 StructurePreventResourceRadiusMultiplier=1.000000
 TribeNameChangeCooldown=15.000000
 PlatformSaddleBuildAreaBoundsMultiplier=1.000000
-StructurePickupTimeAfterPlacement=30.000000
-StructurePickupHoldDuration=0.500000
 AllowIntegratedSPlusStructures=True
 AllowHideDamageSourceFromLogs=True
 DinoCharacterFoodDrainMultiplier=0.75
@@ -158,7 +157,7 @@ sg.HeightFieldShadowQuality=3
 SessionName=Queens
 
 [MessageOfTheDay]
-Message=Two black men in a sleeping bag? Twix!
+Message=Wash yer back!
 Duration=12
 
 [/Script/Engine.GameSession]
