--- a/config/Game.ini
+++ b/config/Game.ini
@@ -26,6 +26,9 @@ GlobalCorpseDecompositionTimeMultiplier=4.0
 CropGrowthSpeedMultiplier=24.000000
 SupplyCrateLootQualityMultiplier=3.0
 FuelConsumptionIntervalMultiplier=10.0
+CustomRecipeEffectivenessMultiplier=3
+CustomRecipeSkillMultiplier=3
+CraftingSkillBonusMultiplier=10
 NPCReplacements=(FromClassName="Ichthyornis_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Pegomastax_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Dilo_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
