Increase difficulty, reduce foliage

--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -67,8 +67,10 @@ PlayerCharacterFoodDrainMultiplier=0.8
 PlayerCharacterHealthRecoveryMultiplier=1.2
 PlayerCharacterStaminaDrainMultiplier=0.8
 PlayerCharacterWaterDrainMultiplier=0.8
-ResourceNoReplenishRadiusPlayers=0.5
-ResourceNoReplenishRadiusStructures=0.5
+ResourceNoReplenishRadiusPlayers=0.8
+ResourceNoReplenishRadiusStructures=0.8
+OverrideOfficialDifficulty=3.0
+DifficultyOffset=1.0
 
 [/Script/ShooterGame.ShooterGameUserSettings]
 MasterAudioVolume=1.000000
