--- a/config/Game.ini
+++ b/config/Game.ini
@@ -3,6 +3,7 @@ bDisableFriendlyFire=true
 bAllowUnlimitedRespecs=true
 bDisableStructurePlacementCollision=true
 PvEDisableFriendlyFire=true
+bAllowFlyerSpeedLeveling=true
 PerLevelStatsMultiplier_Player[0]=1.1
 PerLevelStatsMultiplier_Player[1]=2.0
 PerLevelStatsMultiplier_Player[2]=1.0
