--- a/config/Game.ini
+++ b/config/Game.ini
@@ -53,3 +53,6 @@ ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMea
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_Fish_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_Polymer_Organic_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawMutton_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
+EngramEntryAutoUnlocks=(EngramClassName="EngramEntry_RefinedElement_C",LevelToAutoUnlock=58)
+EngramEntryAutoUnlocks=(EngramClassName="EngramEntry_RefinedShards_C",LevelToAutoUnlock=55)
+ConfigOverrideItemCraftingCosts=(ItemClassString="PrimalItemResource_ElementRefined_C",BaseCraftingResourceRequirements=((ResourceItemTypeString="PrimalItemResource_Polymer_C",BaseResourceRequirement=5.0,bCraftingRequireExactResourceType=false),(ResourceItemTypeString="PrimalItemResource_MetalIngot_C",BaseResourceRequirement=15.0,bCraftingRequireExactResourceType=false),(ResourceItemTypeString="PrimalItemResource_BlackPearl_C",BaseResourceRequirement=2.0,bCraftingRequireExactResourceType=false)))
