--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -21,6 +21,7 @@ ProximityVoiceChat=False
 PvEStructureDecayDestructionPeriod=0.000000
 RCONEnabled=True
 RCONPort=27020
+QueryPort=27016
 ServerCrosshair=True
 ServerForceNoHUD=False
 ServerHardcore=False
