--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -21,7 +21,6 @@ ProximityVoiceChat=False
 PvEStructureDecayDestructionPeriod=0.000000
 RCONEnabled=True
 RCONPort=27020
-QueryPort=27016
 ServerCrosshair=True
 ServerForceNoHUD=False
 ServerHardcore=False
@@ -160,8 +159,8 @@ sg.HeightFieldShadowQuality=3
 SessionName=Queens
 
 [MessageOfTheDay]
-Message=Wash yer back!
-Duration=12
+Message=Welcome, adventurer! Forget Azeroth; here, dinosaurs roam and resourceful survivors brew potent concoctions after a day of taming primal beasts. Saddle up, keep your spear ready, and may your next drink be as strong as a Rex!
+Duration=15
 
 [/Script/Engine.GameSession]
 MaxPlayers=70
