--- a/config/Game.ini
+++ b/config/Game.ini
@@ -57,3 +57,4 @@ EngramEntryAutoUnlocks=(EngramClassName="EngramEntry_RefinedShards_C",LevelToAut
 ConfigOverrideItemCraftingCosts=(ItemClassString="PrimalItemResource_ElementRefined_C",BaseCraftingResourceRequirements=((ResourceItemTypeString="PrimalItemResource_Polymer_C",BaseResourceRequirement=5.0,bCraftingRequireExactResourceType=false),(ResourceItemTypeString="PrimalItemResource_MetalIngot_C",BaseResourceRequirement=15.0,bCraftingRequireExactResourceType=false),(ResourceItemTypeString="PrimalItemResource_BlackPearl_C",BaseResourceRequirement=2.0,bCraftingRequireExactResourceType=false)))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Honey_C",Quantity=(MaxItemQuantity=200,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_Polymer_Organic_C",Quantity=(MaxItemQuantity=500,bIgnoreMultiplier=true))
+HarvestResourceItemAmountClassMultipliers=(ClassName="PrimalItemConsumable_Berry_Narcoberry_C",Multiplier=5.0)
