--- a/config/Game.ini
+++ b/config/Game.ini
@@ -58,3 +58,6 @@ ConfigOverrideItemCraftingCosts=(ItemClassString="PrimalItemResource_ElementRefi
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_Honey_C",Quantity=(MaxItemQuantity=200,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemResource_Polymer_Organic_C",Quantity=(MaxItemQuantity=500,bIgnoreMultiplier=true))
 HarvestResourceItemAmountClassMultipliers=(ClassName="PrimalItemConsumable_Berry_Narcoberry_C",Multiplier=5.0)
+ItemStatClamps[0]=1000000.0  
+ItemStatClamps[4]=1000000.0  
+ItemStatClamps[8]=1000000.0   
