--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -141,6 +141,7 @@ BabyCuddleLoseImprintQualitySpeedMultiplier=0.1
 BabyImprintingStatScaleMultiplier=1
 GlobalSpoilingTimeMultiplier=2.0
 GlobalCorpseDecompositionTimeMultiplier=4.0
+ClampItemStats=True
 
 [ScalabilityGroups]
 sg.ResolutionQuality=100
