--- a/config/Game.ini
+++ b/config/Game.ini
@@ -49,6 +49,7 @@ CraftingSkillBonusMultiplier=10
 NPCReplacements=(FromClassName="Ichthyornis_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Pegomastax_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
 NPCReplacements=(FromClassName="Dilo_Character_BP_C",ToClassName="BionicTrike_Character_BP_C")
+NPCReplacements=(FromClassName="MegaRaptor_Character_BP_C",ToClassName="Sarco_Character_BP_C")
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawPrimeMeat_Fish_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
 ConfigOverrideItemMaxQuantity=(ItemClassString="PrimalItemConsumable_RawMutton_C",Quantity=(MaxItemQuantity=50,bIgnoreMultiplier=true))
