--- a/config/GameUserSettings.ini
+++ b/config/GameUserSettings.ini
@@ -27,6 +27,7 @@ ServerHardcore=False
 ServerPVE=True
 ShowMapPlayerLocation=True
 MapPlayerLocation=True
+StructureResistanceMultiplier=0.000001
 TamedDinoDamageMultiplier=1.000000
 TamedDinoResistanceMultiplier=1.000000
 CropGrowthSpeedMultiplier=24.000000
